examples/test/testpolicy9731.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9731
  namespace: namespace393
spec:
  podSelector:
    matchLabels:
      key43: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value25
          key8: value1
      podSelector:
        matchLabels:
          key14: value32
          key2: value2
